# ApiGateway/api/docs/swagger.yaml
@@ -14,6 +14,11 @@ definitions:
       user_id:
         type: string
     type: object
+  model.Code:
+    properties:
+      code:
+        type: string
+    type: object
   model.Id:
     properties:
       id:
@@ -60,6 +65,8 @@ definitions:
       id:
         type: string
       last_name:
+        type: string
+      login:
         type: string
       phone_number:
         items:
@@ -156,6 +163,25 @@ paths:
           schema:
             type: string
       summary: Create an account with check
+      tags:
+      - user
+  /v1/users/verify/{code}:
+    post:
+      description: This api is for Create user
+      parameters:
+      - description: Verify Code
+        in: path
+        name: code
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/model.Code'
+      summary: Create an account
       tags:
       - user
 swagger: "2.0"
