# ApiGateway/api/handlers/v1/user.go
@@ -2,8 +2,10 @@ package v1
 
 import (
 	"context"
+	"encoding/json"
 	"fmt"
 	"github.com/gin-gonic/gin"
+	rr "github.com/gomodule/redigo/redis"
 	_ "github.com/venomuz/service_api_swag_gin/ApiGateway/api/model"
 	pb "github.com/venomuz/service_api_swag_gin/ApiGateway/genproto"
 	l "github.com/venomuz/service_api_swag_gin/ApiGateway/pkg/logger"
@@ -11,6 +13,7 @@ import (
 	"google.golang.org/protobuf/encoding/protojson"
 	"math/rand"
 	"net/http"
+	"strconv"
 	"time"
 )
 
@@ -148,8 +151,9 @@ func (h *handlerV1) CheckReg(c *gin.Context) {
 		return
 	}
 	num := rand.Intn(999999)
+	str := strconv.Itoa(num)
 	if response.Status == false {
-		err := mail.SendMail(int32(num), body.Email[0])
+		err := mail.SendMail(str, body.Email[0])
 		if err != nil {
 			c.JSON(http.StatusInternalServerError, gin.H{
 				"error": err.Error(),
@@ -158,16 +162,16 @@ func (h *handlerV1) CheckReg(c *gin.Context) {
 			return
 		}
 	}
-	//info, err := json.Marshal(body)
-	//if err != nil {
-	//	c.JSON(http.StatusInternalServerError, gin.H{
-	//		"error": err.Error(),
-	//	})
-	//	h.log.Error("failed to marshal user", l.Error(err))
-	//	return
-	//}
+	info, err := json.Marshal(body)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{
+			"error": err.Error(),
+		})
+		h.log.Error("failed to marshal", l.Error(err))
+		return
+	}
 
-	err = h.redisStorage.Set(string(num), body.String())
+	err = h.redisStorage.SetWithTTL(str, string(info), 500)
 	if err != nil {
 		c.JSON(http.StatusInternalServerError, gin.H{
 			"error": err.Error(),
@@ -175,5 +179,54 @@ func (h *handlerV1) CheckReg(c *gin.Context) {
 		h.log.Error("failed to setting to redis user", l.Error(err))
 		return
 	}
-	c.JSON(http.StatusCreated, response)
+	c.JSON(http.StatusOK, response)
+}
+
+// Verify CheckReg Check and post
+// @Summary      Create an account
+// @Description  This api is for Create user
+// @Tags         user
+// @Produce      json
+// @Param        code   path      string  true  "Verify Code"
+// @Success      200  {object}  model.Code
+// @Router       /v1/users/verify/{code} [post]
+func (h *handlerV1) Verify(c *gin.Context) {
+	body := pb.Useri{}
+	var jspbMarshal protojson.MarshalOptions
+	jspbMarshal.UseProtoNames = true
+	code := c.Param("code")
+	res, err := h.redisStorage.Get(code)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{
+			"error": err.Error(),
+		})
+		h.log.Error("failed to get from redis user", l.Error(err))
+		return
+	}
+	ff, err := rr.String(res, err)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{
+			"error": err.Error(),
+		})
+		h.log.Error("failed to change to string user", l.Error(err))
+		return
+	}
+	err = json.Unmarshal([]byte(ff), &body)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{
+			"error": err.Error(),
+		})
+		h.log.Error("failed to unmarshal", l.Error(err))
+		return
+	}
+	ctx, cancel := context.WithTimeout(context.Background(), time.Second*time.Duration(h.cfg.CtxTimeout))
+	defer cancel()
+	_, err = h.serviceManager.UserService().Create(ctx, &body)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{
+			"error": err.Error(),
+		})
+		h.log.Error("failed to posting to db", l.Error(err))
+		return
+	}
 }
